[package]
name = "zerotrust-drive"
version = "0.6.0"
license = "AGPL-3.0-only"
edition = "2024"

[dependencies]
fuser = "0.17.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libc = "0.2.182"
